[Aalekh] ADD: RSpec testing for subscription
